Replace fabric-loom-native with Java FFM